--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/uchennaanya/CRUDApp#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^9.0.2",
+    "express": "^4.17.1",
+    "mongoose": "^5.12.8"
   }
 }
