--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,11 @@
-name: CI
-
-on: push
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
+steps:
       - uses: actions/checkout@v2
 
-      - name: Run a one-line script
+      - name: Greeting
+        run: echo "Hello, world!"
+
+      - name: Simulate an error
+        run: echo "About to fail" ; exit 1
+
+      - name: Another greeting
         run: echo "Hello, world!"
